src/test/ui/abi/issues/issue-22565-rust-call.stderr
error: functions with the "rust-call" ABI must take a single non-self argument that is a tuple
  --> $DIR/issue-22565-rust-call.rs:3:1
   |
LL | extern "rust-call" fn b(_i: i32) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: functions with the "rust-call" ABI must take a single non-self argument that is a tuple
  --> $DIR/issue-22565-rust-call.rs:9:5
   |
LL |     extern "rust-call" fn b() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: functions with the "rust-call" ABI must take a single non-self argument that is a tuple
  --> $DIR/issue-22565-rust-call.rs:16:5
   |
LL |     extern "rust-call" fn bar() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: functions with the "rust-call" ABI must take a single non-self argument that is a tuple
  --> $DIR/issue-22565-rust-call.rs:21:5
   |
LL |     extern "rust-call" fn a() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

